# FFMint

./: README.md  mvp.md  prompt.txt  pyproject.toml  user-module.md
.github/workflows/: ci.yml
docs/: azure-devOps-phase01.md  day02.md  fastapi.md  main.py  phase01.md  phase02.md  phase03.md  phase04.md  phase05.md
ffmint-iam/: .env.dev  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  entrypoint.sh  lint.sh  main.py  prestart.sh  pyenv_path_fix.sh  pyproject.toml  reset-env.sh
ffmint-iam/app/: config.py  logger.py  main.py
ffmint-iam/app/api/v1/: __init__.py  auth.py  health.py
ffmint-iam/app/api/v1/endpoints/: health.py
ffmint-iam/app/db/: __init__.py  session.py
ffmint-iam/app/models/: __init__.py  user.py
ffmint-iam/app/schemas/: user.py
ffmint-iam/app/services/: security.py
ffmint-iam/tests/db/: test_database.py
ffmint-iam/tests/schemas/: test_user.py
ffmint-iam/tests/services/: test_security.py
