[project]
name = "ffmint-iam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
   "black==25.1.0",
   "fastapi[standard]==0.115.12",
   "flake8==7.2.0",
   "isort==6.0.1",
   "mypy==1.16.0",
   "pylint==3.3.7",
   "pytest==8.4.0",
   "ruff==0.11.13",
]
